--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,8 +5,8 @@
             "name": "C++ Launch",
             "type": "cppdbg",
             "request": "launch",
-            "program": "${workspaceRoot}/test",
-            "args": [],
+            "program": "${workspaceRoot}/a.out",
+            "args": ["output.dat"],
             "stopAtEntry": false,
             "cwd": "${workspaceRoot}",
             "environment": [],
