--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,8 +5,8 @@
             "name": "C++ Launch",
             "type": "cppdbg",
             "request": "launch",
-            "program": "${workspaceRoot}/a.out",
-            "args": ["output.dat"],
+            "program": "${workspaceRoot}/../output/a.out",
+            "args": ["${workspaceRoot}/../output/output.dat"],
             "stopAtEntry": false,
             "cwd": "${workspaceRoot}",
             "environment": [],
@@ -25,7 +25,7 @@
             "name": "C++ Attach",
             "type": "cppdbg",
             "request": "attach",
-            "program": "${workspaceRoot}/a.out",
+            "program": "${workspaceRoot}/../output/a.out",
             "processId": "${command.pickProcess}",
             "linux": {
                 "MIMode": "gdb"
